[package]
name = "day_04"
version = "0.1.0"
authors = ["Marko Puromäki <mpuromaki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking"] }
anyhow = "1.0"
rgb = "0.8"
regex = "1.4"
hex = "0.4"